<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <View
        android:id="@+id/popup_background"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/popup_background" />

    <LinearLayout
        android:id="@+id/new_entry_window"
        android:layout_centerInParent="true"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@color/lighter_black"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/popup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_entry"
                android:textSize="30sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <ImageView
                android:id="@+id/close_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cancel_icon"/>
        </LinearLayout>
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/add_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            app:checkedButton="@id/entry_expense"
            app:selectionRequired="true"
            app:singleSelection="true" >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/entry_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:layout_marginEnd="2dp"
                android:backgroundTint="@color/button_checkable"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
                style="@style/App.Button.Entry"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/entry_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:backgroundTint="@color/button_checkable"
                android:layout_marginEnd="2dp"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
                style="@style/App.Button.Entry"/>
<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/entry_budget"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/budgets"-->
<!--                android:backgroundTint="@color/button_checkable"-->
<!--                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"-->
<!--                style="@style/App.Button.Entry"/>-->
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <LinearLayout
            android:id="@+id/entry_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </LinearLayout>


</RelativeLayout>