<resources>
    <string name="app_name">Walletify</string>
    <string name="cashflow">monthly cashflow</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transactions">Transactions</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="sort_by">Sort by</string>
    <string name="asc">ASC</string>
...
    <string name="signout_confirmation">Are you sure you want to sign out?</string>
    <string name="delete_account_confirmation">Are you sure you want to delete your account?</string>
    <string name="cancel">Cancel</string>
    <string name="note">Note</string>
    <string name="initial_balance">Initial balance</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="to">To</string>
    <string name="add_budget">Add Budget</string>
    <string name="transfer">Transfer</string>
    <string name="add">Add</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="currency">Currency</string>
...
